changed min height to avoid large layout shift

--- a/src/components/DailyDeal/DailyDeal.module.css
+++ b/src/components/DailyDeal/DailyDeal.module.css
@@ -5,8 +5,8 @@
 }
 
 .dailyDeal img {
-  width: 160px;
-  height: auto;
+  width: 300px;
+  
 }
 
 .dailyDealDescription {
