--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,16 +1,15 @@
-.index {
+.home {
   max-width: 80%;
+  min-height: 80vh;
   margin: 0 auto;
-  min-height: 100vh;
   padding: 1rem 0;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   color: black;
 }
 
-.index h1 {
+.home h1 {
   text-align: center;
 }
 
